src/components/Skills/skills.css
@import "tailwindcss";

@property --rotate {
    syntax: "<angle>";
    initial-value: 132deg;
    inherits: false;
}

.flex-skill {
    @apply flex flex-wrap gap-3 md:gap-8 w-[95%] lg:max-w-8/10 2xl:max-w-6/10 m-auto items-center justify-center;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
    width: 100%;
    height: 100%;
    /* height: 200px;
    width: 200px; */
    box-shadow: 0 0 10px 1px rgba(250, 235, 215, 0.2);
    color: #faebd7;
    border-radius: 50%;
    padding: 10px;
    position: relative;
    background-color: #101828;
    cursor: pointer;
    margin-bottom: 30px;
    box-shadow:
        inset 0 0.13vmin rgb(65, 180, 128, 0.8),
        inset 0 0.18vmin rgb(65, 180, 128, 0.8),
        inset 0.1vmin 0.1vmin rgb(219, 0, 51, 0.8);

}

.card:hover {
    color: rgb(88 199 250 / 100%);
    box-shadow: 0 0 20px 1px rgba(250, 235, 215);
    scale: 110%;
    transition: color 1s, box-shadow 1s, scale 0.3s;
    --_float-distance: -20px;
    --_float-speed: 1800ms;
    animation: floating var(--_float-speed) ease-in-out infinite;
    -webkit-animation: floating var(--_float-speed) ease-in-out infinite;

}

.card:hover:before,
.card:hover:after {
    animation: none;
    -webkit-animation: none;
    opacity: 0;
}

.card::before {
    content: "";
    width: 80%;
    height: 80%;
    border-radius: 50px;
    background-image: linear-gradient(var(--rotate), rgb(250, 235, 215, 0.7), rgb(65, 184, 131, 0.7) 43%, rgb(195, 0, 47, 0.7));
    position: absolute;
    filter: blur(15px);
    z-index: -1;
    top: 0%;
    left: 0%;
    /* originale */
    /* animation: spin 2.5s linear infinite alternate;
    -webkit-animation: spin 2.5s linear infinite alternate; */
    /* test 1 */
    /* background-size: 200% 200%;
    animation: bg-move 6s ease-in-out infinite;
    -webkit-animation: bg-move 6s ease-in-out infinite; */
    /* test-2 */
    animation: floating-mobile 5s ease-in-out infinite;
    -webkit-animation: floating-mobile 5s ease-in-out infinite;
    will-change: transform, opacity;
}

.card::after {
    position: absolute;
    content: "";
    top: 2px;
    left: 10px;
    right: 10px;
    z-index: -1;
    height: 90%;
    width: 90%;
    border-radius: 50%;
    margin: 0 auto;
    transform: scale(0.8);
    filter: blur(15px);
    background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2);
    opacity: 1;
    transition: opacity .5s;
    animation: floating-mobile 5s ease-in-out infinite;
    -webkit-animation: floating-mobile 5s ease-in-out infinite;
    will-change: transform, opacity;
}

.card-text {
    font-size: 12px;
}

.card-container {
    width: auto;
    height: auto;
}


@media (width >=360px) {
    .card-container {
        width: 100px;
        height: 100px;
    }

}

@media (width >=640px) {
    .card-container {
        width: 80px;
        height: 80px;
    }
}

@media (width >=768px) {
    .card-container {
        width: 120px;
        height: 120px;
    }

    .card-text {
        font-size: 14px;
    }
}

@media (width >=900px) {
    .card-container {
        width: 150px;
        height: 150px;
    }
}

@media (width >=1024px) {

    .card::before,
    .card::after {
        animation: smooth-rotate 8s linear infinite;
        -webkit-animation: smooth-rotate 8s linear infinite;
    }
}

@media (width >=1280px) {
    .card-container {
        width: 200px;
        height: 200px;
    }
}


@keyframes smooth-rotate {
    0% {
        transform: rotate3d(0, 0, 1, 0deg);
    }

    100% {
        transform: rotate3d(0, 0, 1, 360deg);
    }
}

@-webkit-keyframes smooth-rotate {
    0% {
        transform: rotate3d(0, 0, 1, 0deg);
    }

    100% {
        transform: rotate3d(0, 0, 1, 360deg);
    }
}


@keyframes floating {

    0%,
    100% {
        translate: 0;
    }

    50% {
        translate: 0 var(--_float-distance, -10px);
    }
}

@-webkit-keyframes floating {

    0%,
    100% {
        translate: 0;
    }

    50% {
        translate: 0 var(--_float-distance, -10px);
    }
}

@keyframes floating-mobile {

    0%,
    100% {
        translate: 0;
    }

    50% {
        translate: 0 -10px;
    }
}

@-webkit-keyframes floating-mobile {

    0%,
    100% {
        translate: 0;
    }

    50% {
        translate: 0 -10px;
    }
}

